# fogo-onre

./: .dockerignore  .gitignore  .npmrc  Anchor.toml  Cargo.toml  Makefile  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  cranker-image.yml
assets/: paymaster.toml
deploy/cranker/: Dockerfile  cranker.env.example  docker-compose.yml
docs/: PRE_DEPLOY_CHECKLIST.md  SECURITY_MODEL.md  WITHDRAW_REDESIGN.md  architecture.md  cranker-runbook.md  cranker-staging-checklist.md  deploy-checklist.md  deploy-mainnet.md  fogo-onre.md  intent-fork-replay-argument.md  security.md  todo.md
programs/intent-transfer/: CHANGELOG.md  Cargo.toml
programs/intent-transfer/src/: fees.rs  lib.rs
programs/intent-transfer/src/bridge/: message.rs
programs/intent-transfer/src/bridge/processor/: bridge_ntt_tokens.rs
programs/intent-transfer/src/config/processor/: mod.rs
programs/intent-transfer/src/config/state/: fee_config.rs
programs/intent-transfer/src/intrachain/processor/: send_tokens.rs
scripts/: deploy-fogo-deposit-lut.mjs  extend-fogo-deposit-lut.mjs  verify-intent-fork.sh
tests/: cancel-redemption-onyc-e2e.test.ts  cranker-env-sync.test.ts  deposit-flow-e2e.test.ts  fogo-redeem-intent.test.ts  gateway-pda-derivations.test.ts  initialize-admin.test.ts  intent-setter-pda.test.ts  lock-onyc-e2e.test.ts  migrate-config.test.ts  multi-pair-isolation.test.ts  receive-min-out.test.ts  refund.test.ts  relayer.test.ts  sdk-initialize-pair.test.ts  sdk-jupiter-threshold.test.ts  sdk-min-out-memo.test.ts  sdk-min-out.test.ts  sdk-ntt-managers.test.ts  sdk-ntt-release.test.ts  sdk-onre-nav.test.ts  sdk-pda-min-out.test.ts  sdk-pricing.test.ts  sdk-wallet-min-out.test.ts  send-usdc-to-user-e2e.test.ts  swap-min-out.test.ts  swap-negative.test.ts  swap-onyc-to-usdc-e2e.test.ts  unlock-onyc-e2e.test.ts  withdraw-counter-nonzero.test.ts  withdraw-failure-paths.test.ts  withdraw-flow-e2e.test.ts
(+87 files in other folders)
